# CppNd-Capstone-Face-Mask-Detector

./: CMakeLists.txt  README.md  main.cpp
face_mask_detector_model/: .gitignore  Face_Mask_Detector_(Model_Train_and_Save).ipynb  Face_Mask_Detector_V2_(Model_Train_and_Save).ipynb  fix_saved_graph_refs_problem.py  train_mask_detector.py
face_mask_detector_model/face_mask_detector/: face_mask_detector_model.pbtxt
face_mask_detector_model/face_mask_detector/checkpoints/: checkpoint  face_mask_detector_model.data-00000-of-00002  face_mask_detector_model.index
face_mask_detector_model/face_mask_detector/face_mask_detector_model/variables/: variables.data-00000-of-00002  variables.index
face_mask_detector_model/face_mask_detector/saver_data/: face_mask_detector_model.index
face_mask_detector_model/face_mask_detector/saver_data_v2/: frozen_model.pb  frozen_optimized_model.pb  model.pb  model_saved_as_text.pbtxt  train.ckpt.data-00000-of-00001  train.ckpt.index
face_mask_detector_model/face_mask_detector/saver_data_v3/: checkpoint  keras_to_tensorflow.py  model.index
face_mask_detector_model/model_test/: detect_mask_image.py  detect_mask_video.py  instructions.txt
include/: BoundingBoxesWindow.h  FaceMaskDetector.h
src/: BoundingBoxesWindow.cpp  FaceMaskDetector.cpp
